--- a/src/components/home/ProductsPreview.astro
+++ b/src/components/home/ProductsPreview.astro
@@ -24,7 +24,7 @@ import Slider from "../ui/Slider";
         <SecondaryButton href="/" text="Ver más" color="bg-green-400" />
     </div>
     <div
-        class="md:w-1/2 h-full object-contain flex items-center justify-center p-10"
+        class="md:w-1/2 w-full h-full object-contain hidden md:flex items-center justify-center py-10 px-20"
     >
         <Slider client:idle />
     </div>
