--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Navbar from '@/components/Navbar.astro';
 import Layout from '../layouts/Layout.astro';
 import Home from '@/components/home/Home.astro';
 import ProductsPreview from '@/components/home/ProductsPreview.astro';
+import Contact from '@/components/home/Contact.astro';
 ---
 
 <Layout>
@@ -10,5 +11,6 @@ import ProductsPreview from '@/components/home/ProductsPreview.astro';
     <main class="container h-full mx-auto">
         <Home />
         <ProductsPreview />
+        <Contact />
     </main>
 </Layout>
