--- a/src/components/home/Home.astro
+++ b/src/components/home/Home.astro
@@ -1,5 +1,5 @@
 ---
-import SecondaryButton from "../ui/SecondaryButton.astro";
+import SecondaryButton from "../ui/buttons/SecondaryButton";
 ---
 
 <section id="home" class="h-full flex justify-center items-center flex-col md:flex-row px-4 gap-10 md:gap-0">
