--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "./ui/PrimaryButton.astro";
+import Button from "./ui/buttons/PrimaryButton.astro";
 ---
 
 <header class="fixed w-full ">
