Adding widgets chatbot and annouscment

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,16 @@ import Contact from '@/components/home/Contact.astro';
 <Layout>
     <Navbar/>
     <main class="container h-full mx-auto">
+        <div class="fixed">
+            <script is:inline src="https://static.elfsight.com/platform/platform.js" async></script>
+            <div class="elfsight-app-9d2a991c-b6e0-4162-a3a4-cef42e394a6b" data-elfsight-app-lazy></div>
+        </div>
         <Home />
         <ProductsPreview />
         <Contact />
+        <div>
+            <script is:inline src="https://static.elfsight.com/platform/platform.js" async></script>
+            <div class="elfsight-app-10a627ab-3b90-4b52-815a-3d72bfb3c49c" data-elfsight-app-lazy></div>
+        </div>
     </main>
 </Layout>
