--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,7 @@
 import Button from "./ui/buttons/PrimaryButton.astro";
 ---
 
-<header class="fixed w-full ">
+<header class="fixed w-full z-50">
     <nav class="flex container mx-auto md:p-10 px-4 py-6 items-center justify-between md:backdrop-blur-sm">
         <a href="/" class="flex items-center gap-2">
             <img src="/logo.svg" alt="logo" class="w-10 h-10" />
