--- a/src/components/home/ProductsPreview.astro
+++ b/src/components/home/ProductsPreview.astro
@@ -18,7 +18,7 @@ import Slider from "../ui/Slider";
         </p>
         <SecondaryButton href="/" text="Ver más" color="bg-green-400" />
     </div>
-    <div class="md:w-1/2 w-full h-full object-contain md:flex items-center justify-center py-10 px-20">
+    <div class="md:w-1/2 w-full h-full object-contain md:flex items-center justify-center py-10">
         <Slider client:idle />
     </div>
 </section>
