Add utility functions, update package dependencies, and enhance UI components for improved functionality and design

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,10 @@ import Contact from '@/components/home/Contact.astro';
 <Layout>
     <Navbar/>
     <main class="container h-full mx-auto">
-        <div class="fixed">
+        <!-- <div class="fixed">
             <script is:inline src="https://static.elfsight.com/platform/platform.js" async></script>
             <div class="elfsight-app-9d2a991c-b6e0-4162-a3a4-cef42e394a6b" data-elfsight-app-lazy></div>
-        </div>
+        </div>-->
         <Home />
         <ProductsPreview />
         <Contact />
