--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>Making Something</title>
 	</head>
-	<body class="bg-primary">
+	<body class="bg-primary dark:bg-gray-900">
 		<slot />
 	</body>
 </html>
