--- a/src/pages/Login.astro
+++ b/src/pages/Login.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import Log from "@/components/forms/Login"
+import Log from "@/components/forms/Login.tsx"
 
 ---
 
