Fix import paths for UserProfile and Register components to include TypeScript file extensions

--- a/src/pages/Sign.astro
+++ b/src/pages/Sign.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import Register from "@/components/forms/registration-form"
+import Register from "@/components/forms/registration-form.tsx"
 ---
 
 <Layout>
