Fix import paths for Slider and ContactForm components to include TypeScript file extensions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 import Navbar from "@/components/Navbar.astro";
 import Layout from "../layouts/Layout.astro";
 import SecondaryButton from "@/components/ui/buttons/SecondaryButton.astro";
-import Slider from "@/components/ui/Slider";
-import ContactForm from "@/components/forms/ContactForm";
+import Slider from "@/components/ui/Slider.tsx";
+import ContactForm from "@/components/forms/ContactForm.tsx";
 ---
 
 <Layout>
