--- a/src/pages/Profile.astro
+++ b/src/pages/Profile.astro
@@ -1,5 +1,5 @@
 ---
-import UserProfile from "@/components/user-profile.tsx";
+import UserProfile from "@/components/sections/user-profile";
 import Layout from "@/layouts/Layout.astro";
 
 ---
