--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,11 +18,13 @@ import "../styles/global.css";
 <style is:global>
 	*{
 		scroll-behavior: smooth;
+		
 	}
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		overflow-x: hidden;
 	}
 </style>
