--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,27 @@
 ---
-import Navbar from "@/components/Navbar.astro";
+import Navbar from "@/components/sections/Navbar.astro";
 import Layout from "../layouts/Layout.astro";
 import SecondaryButton from "@/components/ui/buttons/SecondaryButton.astro";
 import Slider from "@/components/ui/Slider.tsx";
 import ContactForm from "@/components/forms/ContactForm.tsx";
+import Footer from "@/components/sections/Footer.astro";
+import CardService from "@/components/ui/card-service.astro";
 ---
 
 <Layout>
     <Navbar />
-    <main class="container h-full mx-auto">
-        <section id="home" class="h-full flex justify-center items-center flex-col md:flex-row px-4 md:px-0 gap-10 md:gap-0">
-            <div class="flex flex-col gap-6 justify-start items-start md:w-5/6 lg:w-2/3">
+    <main class="min-w-screen h-full mx-auto">
+        <section
+            id="home"
+            class="h-full flex justify-center items-center flex-col md:flex-row px-4 md:px-40 gap-10 md:gap-0"
+        >
+            <div
+                class="flex flex-col gap-6 justify-start items-start md:w-5/6 lg:w-2/3"
+            >
                 <p class="font-medium text-gray-500">
-                    Hola, bienvenido a <span class="font-bold">Making Something</span> ^^
+                    Hola, bienvenido a <span class="font-bold"
+                        >Making Something</span
+                    > ^^
                 </p>
                 <h1 class="font-extrabold text-7xl">
                     If you can imagine you can make it! 😼
@@ -31,14 +40,19 @@ import ContactForm from "@/components/forms/ContactForm.tsx";
             <!-- <div class="md:w-1/2 object-contain flex items-center justify-center p-10 group"></div>-->
         </section>
 
-        <section id="products" class="py-20 h-full px-4 md:px-40 flex justify-center items-center flex-col md:flex-row gap-10 md:gap-0">
-            <div class="flex flex-col gap-6 justify-start items-start md:w-5/6 lg:w-2/3">
-                <h1 class="font-medium text-gray-500">
+        <section
+            id="products"
+            class="py-20 h-full px-4 md:px-60 flex justify-center items-center flex-col md:flex-row gap-10 md:gap-0"
+        >
+            <div
+                class="flex flex-col gap-6 justify-center items-start md:w-4/6 lg:w-2/3 md:ml-18"
+            >
+                <p class="font-medium text-gray-500">
                     Explora nuestra selección de productos más vendidos
-                </h1>
-                <p class="font-extrabold text-5xl">
-                    ¡Sumérgete en nuestro catálogo! 🛍️
                 </p>
+                <h2 class="font-extrabold text-5xl">
+                    ¡Sumérgete en nuestro catálogo! 🛍️
+                </h2>
                 <p class="font-medium text-gray-600">
                     Descubre los productos más vendidos de la temporada,
                     encuentra el regalo perfecto para esa persona especial o
@@ -51,10 +65,73 @@ import ContactForm from "@/components/forms/ContactForm.tsx";
             </div>
         </section>
 
-        <section id="contact" class="py-40 px-4 flex justify-center items-center flex-col md:flex-row gap-10 md:gap-0">
-            <div class="flex flex-col gap-6 justify-center items-center md:w-5/6">
-                <ContactForm client:load/>
+        <section
+            id="services"
+            class="py-20 h-full px-4 flex justify-center items-center flex-col"
+        >
+            <div class="py-20 px-120">
+                <h2 class="font-extrabold text-4xl text-center">
+                    Descubre todos los servicios que tenemos para ti 🛠️
+                </h2>
             </div>
+            <div class="grid md:grid-cols-2 gap-8 w-4/6">
+                <div class="flex justify-center items-center">
+                    <CardService
+                        name="Creación de Pines Personalizados🔥"
+                        color="0,200,0,1"
+                        description="Diseñamos y fabricamos pines personalizados para cualquier ocasión. ¡Haz que tu estilo brille!"
+                    />
+                </div>
+                <div class="flex justify-center items-center">
+                    <CardService
+                        name="Diseño e impresion 3D💡"
+                        description="Fabricamos desde juguetes, piezas de coleccion y cosplay. ¡Haz realidad tus ideas!"
+                        color="0,165,255,1"
+                    />
+                </div>
+                <div class="flex justify-center items-center">
+                    <CardService
+                        name="Diseño y programacion web💻"
+                        color="180,0,190,1"
+                        description="Creamos sitios web personalizados para tu negocio o proyecto. ¡Haz que tu presencia en línea sea única!"
+                    />
+                </div>
+                <div class="flex justify-center items-center">
+                    <CardService
+                        name="Autos a escala🚗"
+                        color="255,130,0,1"
+                        description="Tenemos a la venta autos a escala 1:24 ideales para coleccionistas y amantes de los autos. ¡Haz tu colección unica!"
+                    />
+                </div>
+            </div>
+        </section>
+
+        <section
+            id="contact"
+            class="py-20 px-4 flex justify-center items-center flex-col md:flex-row gap-10 md:gap-0 w-full"
+        >
+            <div
+                class="flex flex-col gap-6 justify-center items-center md:w-4/6 lg:w-3/8"
+            >
+                <p class="font-medium text-gray-800 text-center">
+                    ¡Get in touch!
+                </p>
+                <h2 class="font-extrabold text-5xl text-center">
+                    ¿Tienes una idea en mente? 💡
+                </h2>
+                <p class="font-medium text-gray-600 text-center">
+                    Ya sea que necesite un diseño personalizado, un servicio de
+                    impresión 3D o tenga preguntas sobre nuestros juguetes,
+                    mandanos un mensaje y te responderemos enseguida.
+                </p>
+            </div>
+            <div class="p-6 md:p-24 flex flex-col justify-center items-center">
+                <ContactForm client:load />
+            </div>
+        </section>
+
+        <section id="footer" class="pt-20">
+            <Footer />
         </section>
     </main>
 </Layout>
