--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import Slider from "@/components/ui/Slider.tsx";
 import ContactForm from "@/components/forms/ContactForm.tsx";
 import Footer from "@/components/sections/Footer.astro";
 import CardService from "@/components/ui/card-service.astro";
+import CardSocial from "@/components/ui/card-social.astro";
+import { RefreshCw } from "@lucide/astro";
 ---
 
 <Layout>
@@ -61,20 +63,20 @@ import CardService from "@/components/ui/card-service.astro";
                 <SecondaryButton href="/" text="Ver más" color="bg-green-400" />
             </div>
             <div class="md:w-1/2 w-full object-contain md:flex py-10">
-                <Slider client:load />
+                <Slider client:only />
             </div>
         </section>
 
         <section
             id="services"
-            class="py-20 h-full px-4 flex justify-center items-center flex-col"
+            class="py-20 h-min md:h-full px-4 flex justify-center items-center flex-col"
         >
-            <div class="py-20 px-120">
+            <div class="py-20 px-2 md:px-120">
                 <h2 class="font-extrabold text-4xl text-center">
                     Descubre todos los servicios que tenemos para ti 🛠️
                 </h2>
             </div>
-            <div class="grid md:grid-cols-2 gap-8 w-4/6">
+            <div class="grid md:grid-cols-2 gap-8 w-full px-8 md:w-4/6">
                 <div class="flex justify-center items-center">
                     <CardService
                         name="Creación de Pines Personalizados🔥"
@@ -93,7 +95,7 @@ import CardService from "@/components/ui/card-service.astro";
                     <CardService
                         name="Diseño y programacion web💻"
                         color="180,0,190,1"
-                        description="Creamos sitios web personalizados para tu negocio o proyecto. ¡Haz que tu presencia en línea sea única!"
+                        description="Te gustaria tener tu propia pagina web? Te ayudamos a crearla desde cero. para neogocios, portafolios, blogs, proyectos, etc."
                     />
                 </div>
                 <div class="flex justify-center items-center">
@@ -108,7 +110,7 @@ import CardService from "@/components/ui/card-service.astro";
 
         <section
             id="contact"
-            class="py-20 px-4 flex justify-center items-center flex-col md:flex-row gap-10 md:gap-0 w-full"
+            class="py-20 px-4 w-full h-min md:h-full flex justify-center items-center flex-col md:flex-row gap-10 md:gap-0"
         >
             <div
                 class="flex flex-col gap-6 justify-center items-center md:w-4/6 lg:w-3/8"
@@ -122,12 +124,22 @@ import CardService from "@/components/ui/card-service.astro";
                 <p class="font-medium text-gray-600 text-center">
                     Ya sea que necesite un diseño personalizado, un servicio de
                     impresión 3D o tenga preguntas sobre nuestros juguetes,
-                    mandanos un mensaje y te responderemos enseguida.
+                    mandanos mensaje a nuestras redes sociales y te responderemos enseguida.
                 </p>
             </div>
-            <div class="p-6 md:p-24 flex flex-col justify-center items-center">
+            <div 
+                id="card-social"
+                class="p-6 md:w-1/3 flex flex-col justify-center items-center">
+                <CardSocial ></CardSocial>
+            </div>
+            <div 
+                id="email-form"
+                class="hidden justify-center items-center p-6 md:w-1/3">
                 <ContactForm client:load />
             </div>
+            <button onclick="showEmailForm()" class="flex justify-center items-center p-4 border-1 border-black shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow rounded-full">
+                    <RefreshCw />
+            </button>
         </section>
 
         <section id="footer" class="pt-20">
@@ -135,3 +147,19 @@ import CardService from "@/components/ui/card-service.astro";
         </section>
     </main>
 </Layout>
+
+
+<script is:inline>
+    const showEmailForm = () => {
+        const cardSocial = document.getElementById("card-social");
+        const emailForm = document.getElementById("email-form");
+        if (cardSocial && emailForm.getAttribute("class").includes("hidden")) {
+            cardSocial.classList.add("hidden");
+            emailForm.classList.remove("hidden");
+        }
+        else {            
+            cardSocial.classList.remove("hidden");
+            emailForm.classList.add("hidden");
+        }
+    };
+</script>
