--- a/src/components/ui/card-social.astro
+++ b/src/components/ui/card-social.astro
@@ -12,7 +12,7 @@ import WhatsApp from "@/components/icons/whatsapp-svg.astro";
     <ul class="flex gap-4">
         <li>
             <a href="/Proximamente">
-                <Facebook class="w-12 h-12" />
+                <Facebook class="w-12 h-12 hover:scale-110 transition-all duration-200" />
             </a>
         </li>
         <li>
@@ -20,7 +20,7 @@ import WhatsApp from "@/components/icons/whatsapp-svg.astro";
                 href="https://www.instagram.com/making.something_/"
                 target="_blank"
             >
-                <Instagram class="w-12 h-12"/>
+                <Instagram class="w-12 h-12 hover:scale-110 transition-all duration-200"/>
             </a>
         </li>
     </ul>
@@ -32,7 +32,7 @@ import WhatsApp from "@/components/icons/whatsapp-svg.astro";
         </li>
         <li>
             <a href="/Proximamente">
-                <Github class="w-12 h-12" />
+                <Github class="w-12 h-12 hover:scale-110 transition-all duration-200" />
             </a>
         </li>
     </ul>
