--- a/src/components/icons/whatsapp-svg.astro
+++ b/src/components/icons/whatsapp-svg.astro
@@ -1,4 +1,5 @@
 <svg
+    class="hover:scale-110 transition-all duration-200"
     xmlns="http://www.w3.org/2000/svg"
     width="3em"
     height="3em"
