--- a/src/components/ui/card-service.astro
+++ b/src/components/ui/card-service.astro
@@ -9,7 +9,7 @@ interface Props {
 const { name, description, color } = Astro.props as Props;
 ---
 
-<div class="bg-white border-1 border-gray-300 rounded-lg p-4 max-w-sm transition duration-200" style={`--shadow-color: rgba(${color})`}>
+<div class="min-w-sm max-w-lg bg-white border-1 border-gray-300 rounded-lg p-4 transition duration-200" style={`--shadow-color: rgba(${color})`}>
     <h2 class="m-0 text-xl font-bold text-black">{name}</h2>
     <p class="mt-2 text-base text-gray-700">{description}</p>
 </div>
