--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { RefreshCw } from "@lucide/astro";
     <main class="min-w-screen h-full mx-auto">
         <section
             id="home"
-            class="h-full flex justify-center items-center flex-col md:flex-row px-4 md:px-40 gap-10 md:gap-0"
+            class="h-full flex justify-center items-center flex-col lg:flex-row px-4 xl:px-40 gap-10 md:gap-0"
         >
             <div
                 class="flex flex-col gap-6 justify-start items-start md:w-5/6 lg:w-2/3"
@@ -44,10 +44,10 @@ import { RefreshCw } from "@lucide/astro";
 
         <section
             id="products"
-            class="py-20 h-full px-4 md:px-60 flex justify-center items-center flex-col md:flex-row gap-10 md:gap-0"
+            class="py-20 h-min px-4 md:px-24 xl-2:px-60 flex justify-center items-center flex-col xl:flex-row gap-10 md:gap-0"
         >
             <div
-                class="flex flex-col gap-6 justify-center items-start md:w-4/6 lg:w-2/3 md:ml-18"
+                class="flex flex-col gap-6 justify-center items-start lg:w-5/6 xl:w-1/3 xl-2:ml-30"
             >
                 <p class="font-medium text-gray-500">
                     Explora nuestra selección de productos más vendidos
@@ -62,21 +62,21 @@ import { RefreshCw } from "@lucide/astro";
                 </p>
                 <SecondaryButton href="/" text="Ver más" color="bg-green-400" />
             </div>
-            <div class="md:w-1/2 w-full object-contain md:flex py-10">
+            <div class="lg:w-1/2 w-full object-contain md:flex py-10 lg:ml-20">
                 <Slider client:only />
             </div>
         </section>
 
         <section
             id="services"
-            class="py-20 h-min md:h-full px-4 flex justify-center items-center flex-col"
+            class="py-20 h-min lg:h-full px-4 flex justify-center items-center flex-col"
         >
-            <div class="py-20 px-2 md:px-120">
+            <div class="py-20 px-2 md:px-20 xl:px-100">
                 <h2 class="font-extrabold text-4xl text-center">
-                    Descubre todos los servicios que tenemos para ti 🛠️
+                    Descubre todos los servicios que ofrecemos 🛠️
                 </h2>
             </div>
-            <div class="grid md:grid-cols-2 gap-8 w-full px-8 md:w-4/6">
+            <div class="grid xl:grid-cols-2 gap-8 w-full px-8 md:w-4/6">
                 <div class="flex justify-center items-center">
                     <CardService
                         name="Creación de Pines Personalizados🔥"
@@ -102,7 +102,7 @@ import { RefreshCw } from "@lucide/astro";
                     <CardService
                         name="Autos a escala🚗"
                         color="255,130,0,1"
-                        description="Tenemos a la venta autos a escala 1:24 ideales para coleccionistas y amantes de los autos. ¡Haz tu colección unica!"
+                        description="Proximamente a la venta autos a escala 1:24 ideales para coleccionistas y amantes de los autos. ¡Haz tu colección unica!"
                     />
                 </div>
             </div>
@@ -110,10 +110,10 @@ import { RefreshCw } from "@lucide/astro";
 
         <section
             id="contact"
-            class="py-20 px-4 w-full h-min md:h-full flex justify-center items-center flex-col md:flex-row gap-10 md:gap-0"
+            class="py-20 px-4 w-full h-min xl:h-full flex justify-center items-center flex-col xl:flex-row gap-16"
         >
             <div
-                class="flex flex-col gap-6 justify-center items-center md:w-4/6 lg:w-3/8"
+                class="flex flex-col gap-6 justify-center items-center md:w-4/6 xl:w-3/8"
             >
                 <p class="font-medium text-gray-800 text-center">
                     ¡Get in touch!
@@ -129,12 +129,12 @@ import { RefreshCw } from "@lucide/astro";
             </div>
             <div 
                 id="card-social"
-                class="p-6 md:w-1/3 flex flex-col justify-center items-center">
+                class="p-6 xl:w-1/3 flex flex-col justify-center items-center">
                 <CardSocial ></CardSocial>
             </div>
             <div 
                 id="email-form"
-                class="hidden justify-center items-center p-6 md:w-1/3">
+                class="hidden justify-center items-center p-6 xl:w-1/3">
                 <ContactForm client:load />
             </div>
             <button onclick="showEmailForm()" class="flex justify-center items-center p-4 border-1 border-black shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow rounded-full">
