Enhance Slider component: add EffectCreative module and adjust creative effect settings

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import { RefreshCw } from "@lucide/astro";
             class="py-20 h-min px-4 md:px-24 xl-2:px-60 flex justify-center items-center flex-col xl:flex-row gap-10 md:gap-0"
         >
             <div
-                class="flex flex-col gap-6 justify-center items-start lg:w-5/6 xl:w-1/3 xl-2:ml-30"
+                class="flex flex-col gap-6 justify-center items-start lg:w-5/6 xl:w-1/4"
             >
                 <p class="font-medium text-gray-500">
                     Explora nuestra selección de productos más vendidos
@@ -62,7 +62,7 @@ import { RefreshCw } from "@lucide/astro";
                 </p>
                 <SecondaryButton href="/" text="Ver más" color="bg-green-400" />
             </div>
-            <div class="lg:w-1/2 w-full object-contain md:flex py-10 lg:ml-20">
+            <div class="lg:w-1/3 w-full object-contain md:flex py-10 lg:ml-20">
                 <Slider client:only />
             </div>
         </section>
@@ -76,7 +76,7 @@ import { RefreshCw } from "@lucide/astro";
                     Descubre todos los servicios que ofrecemos 🛠️
                 </h2>
             </div>
-            <div class="grid xl:grid-cols-2 gap-8 w-full px-8 md:w-4/6">
+            <div class="grid xl:grid-cols-2 gap-8 w-full md:w-4/6">
                 <div class="flex justify-center items-center">
                     <CardService
                         name="Creación de Pines Personalizados🔥"
@@ -110,7 +110,7 @@ import { RefreshCw } from "@lucide/astro";
 
         <section
             id="contact"
-            class="py-20 px-4 w-full h-min xl:h-full flex justify-center items-center flex-col xl:flex-row gap-16"
+            class="py-20 px-4 w-full min-h-screen xl:h-full flex justify-center items-center flex-col xl:flex-row gap-16"
         >
             <div
                 class="flex flex-col gap-6 justify-center items-center md:w-4/6 xl:w-3/8"
