--- a/src/components/ui/Slider.astro
+++ b/src/components/ui/Slider.astro
@@ -1,5 +1,9 @@
 ---
 import Card from "./preview-card.astro";
+import { getCollection } from "astro:content";
+
+const products = await getCollection('products');
+
 ---
 
 <link
@@ -10,39 +14,29 @@ import Card from "./preview-card.astro";
     is:inline
     src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script is:inline type="module">
-import Swiper from "https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js";
+    import Swiper from "https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js";
 
     const swiper = new Swiper(".swiper", {
         loop: true,
-
     });
 </script>
 
 <div class="swiper z-10">
     <div class="swiper-wrapper">
-        <div class="swiper-slide py-18">
-            <Card title="Pin 5.6cm" description="This is the first card." />
-        </div>
-        
-        <div class="swiper-slide py-18">
-            <Card title="Pin 3.2cm" description="This is the first card." />
-        </div>
-
-        <div class="swiper-slide py-18">
-            <Card title="Pin llavero" description="This is the first card." />
-        </div>
-
-        <div class="swiper-slide py-18">
-            <Card title="Pin magnetico" description="This is the first card." />
-        </div>
-
-        <div class="swiper-slide py-18">
-            <Card title="Pin destapador magnetico" description="This is the first card." />
-        </div>
-
-        <div class="swiper-slide py-18">
-            <Card title="Impresion 3D" description="This is the first card." />
-        </div>
+        {
+            products.map((product) => {
+                const { slug, data } = product.data;
+                const { name, description, price, imageUrl } = data;
+                return (
+                    <div class="swiper-slide py-18">
+                        <Card
+                            slug={slug}
+                            name={name}
+                            description={description}
+                        />
+                    </div>
+                );
+            })
+        }
     </div>
-    
 </div>
