--- a/src/components/ui/preview-card.astro
+++ b/src/components/ui/preview-card.astro
@@ -2,17 +2,17 @@
 import { Tag } from '@lucide/astro';
 
 interface Props {
-    title: string;
+    slug: string;
+    name: string;
     description: string;
-    img?: string;
-    link?: string
+    price?: number;
+    imageUrl?: string;
 }
-
-const { title, description, img, link }: Props = Astro.props;
+const { slug, name, description }: Props = Astro.props;
 ---
 
 <div class="flex flex-col justify-center items-center">
-    <a href={link} class="hover:cursor-pointer">
+    <a href={`/product/${slug}`} class="hover:cursor-pointer">
         <div
             class="relative bg-blue-400 border-3 rounded-2xl h-52 w-60 border-black shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition-shadow"
  >
@@ -37,7 +37,7 @@ const { title, description, img, link }: Props = Astro.props;
             <button
                 class="absolute -bottom-14 right-0 px-5 py-1 bg-amber-400 border-black border-3 rounded-4xl shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] hover:cursor-pointer transition-shadow"
             >
-                {title}
+                {name}
             </button>
         </div>
     </a>
