add prerender in dinamics paths

--- a/src/pages/product/[id].astro
+++ b/src/pages/product/[id].astro
@@ -1,10 +1,11 @@
 ---
+export const prerender = true;
 import { getCollection } from "astro:content";
 
 import Layout from "@/layouts/Layout.astro";
 
 export async function getStaticPaths() {
-    const products = await getCollection("products");   
+    const products = await getCollection("products");
     
     return products.map((product) => ({
         params: { id: product.data.slug },
