--- a/src/pages/Profile.astro
+++ b/src/pages/Profile.astro
@@ -5,5 +5,5 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout>
-    <UserProfile client:load></UserProfile>
+    <UserProfile client:idle></UserProfile>
 </Layaout>
