--- a/src/pages/product/[slug].astro
+++ b/src/pages/product/[slug].astro
@@ -3,12 +3,6 @@ export const prerender = true;
 import { getCollection } from "astro:content";
 
 import Layout from "@/layouts/Layout.astro";
-import {
-    Card,
-    CardContent,
-    CardFooter,
-    CardHeader,
-} from "@/components/ui/card.tsx";
 import { Button } from "@/components/ui/button.tsx";
 import { Input } from "@/components/ui/input.tsx";
 import { Plus, Minus } from "@lucide/astro";
@@ -33,19 +27,19 @@ const { name, description, price, imagesUrl } = product.data;
         <article
             class="flex flex-col items-center justify-center lg:flex-row w-full py-40 lg:w-1/2 h-full gap-24"
         >
-            <Card
-                className="flex justify-center items-center gap-8 w-[400px] h-7/8 border-gray-300 shadow-lg rounded-sm"
+            <div
+                class="flex justify-center items-center gap-8 w-[400px] h-full border-gray-300 shadow-lg rounded-sm border bg-card text-card-foreground"
             >
-                <CardContent>
+                <div class="p-6">
                     <SliderProduct productImages={imagesUrl} client:idle></SliderProduct>
-                </CardContent>
-            </Card>
+                </div>
+            </div>
 
-            <Card
-                className="w-[400px] h-full py-12 px-8 justify-between border-1 border-gray-300 rounded-sm shadow-lg"
+            <div
+                class="w-[400px] h-full py-12 px-8 justify-between border-1 border-gray-300 rounded-sm shadow-lg bg-card text-card-foreground"
             >
-                <CardHeader className="text-3xl font-extrabold">{name}</CardHeader>
-                <CardContent className="flex flex-col gap-8 h-1/2">
+                <div class="text-3xl font-extrabold flex flex-col space-y-1.5 p-6">{name}</div>
+                <div class="flex flex-col gap-8 h-1/2 p-6 pt-0">
                     <div>
                         <h2 class="text-lg font-medium">
                             ${price} MXN C/U
@@ -56,9 +50,9 @@ const { name, description, price, imagesUrl } = product.data;
                             {description}
                         </p>
                     </div>
-                </CardContent>
-                <CardFooter className="flex flex-col gap-4">
-                    <div class="flex justify-center items-center">
+                </div>
+                <div class="flex flex-col gap-4">
+                    <div class="flex justify-center items-center p-6 pt-0 ">
                         <Button
                             id="decrement"
                             className="bg-white hover:bg-gray-200 hover:cursor-pointer"
@@ -83,8 +77,7 @@ const { name, description, price, imagesUrl } = product.data;
                     >
                         Add to cart
                     </button>
-                </CardFooter>
-            </Card>
+                </div>
         </article>
     </section>
 </Layout>
