refactor: streamline product data handling in [slug].astro by removing unused static paths and props

--- a/src/pages/product/[slug].astro
+++ b/src/pages/product/[slug].astro
@@ -1,5 +1,4 @@
 ---
-export const prerender = true;
 import { getCollection } from "astro:content";
 
 import Layout from "@/layouts/Layout.astro";
@@ -8,18 +7,12 @@ import { Input } from "@/components/ui/input.tsx";
 import { Plus, Minus } from "@lucide/astro";
 import { SliderProduct } from "@/components/ui/slider-product.tsx";
 
-export async function getStaticPaths() {
-    const products = await getCollection("products");
+const { params } = Astro
 
-    return products.map((product) => ({
-        params: { slug: product.data.slug },
-        props: { product: product.data },
-    }));
-}
+const products = await getCollection("products");
 
+const product = products.find(p => p.data.slug === params.slug)    
 
-const { product } = Astro.props;
-const { name, description, price, imagesUrl } = product.data;
 ---
 
 <Layout>
@@ -31,23 +24,23 @@ const { name, description, price, imagesUrl } = product.data;
                 class="flex justify-center items-center gap-8 w-[400px] h-full border-gray-300 shadow-lg rounded-sm border bg-card text-card-foreground"
             >
                 <div class="p-6">
-                    <SliderProduct productImages={imagesUrl} client:idle></SliderProduct>
+                    <SliderProduct productImages={product?.data.data.imagesUrl || ["example"]} client:idle></SliderProduct>
                 </div>
             </div>
 
             <div
                 class="w-[400px] h-full py-12 px-8 justify-between border-1 border-gray-300 rounded-sm shadow-lg bg-card text-card-foreground"
             >
-                <div class="text-3xl font-extrabold flex flex-col space-y-1.5 p-6">{name}</div>
+                <div class="text-3xl font-extrabold flex flex-col space-y-1.5 p-6">{product?.data.data.name}</div>
                 <div class="flex flex-col gap-8 h-1/2 p-6 pt-0">
                     <div>
                         <h2 class="text-lg font-medium">
-                            ${price} MXN C/U
+                            ${product?.data.data.price} MXN C/U
                         </h2>
                     </div>
                     <div class="mt-4">
                         <p>
-                            {description}
+                            {product?.data.data.description}
                         </p>
                     </div>
                 </div>
