chore: update version to 0.5.2 in package.json and add Badge component for upcoming services

--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -9,7 +9,10 @@ import SecondaryButton from "../ui/buttons/SecondaryButton.astro";
         <div>
             <a href="/" class="flex items-center gap-2">
                 <img src="/logo.svg" alt="logo" class="w-10 h-10" />
-                <span class="text-lg font-bold">Making Something</span>
+                <div class="flex flex-col">
+                    <span class="text-lg font-bold">Making Something</span>
+                    <span class="text-center text-gray-400">(Beta 0.5.2)</span>
+                </div>
             </a>
         </div>
         <div class="pl-12">
