--- a/src/pages/product/[slug].astro
+++ b/src/pages/product/[slug].astro
@@ -17,67 +17,69 @@ export async function getStaticPaths() {
     }));
 }
 
-
 const { product } = Astro.props;
 const { name, description, price, imagesUrl } = product.data;
 ---
 
 <Layout>
-    <section class="flex px-8 lg:px-40 items-center justify-evenly min-h-screen">
-        <article
-            class="flex flex-col items-center justify-center lg:flex-row w-full py-40 lg:w-1/2 h-full gap-24"
+    <section
+        class="flex flex-col md:items-center justify-evenly px-4 lg:px-40 min-h-screen lg:flex-row w-full py-40 gap-24 lg:gap-0"
+    >
+        <aside
+            class="flex justify-center gap-8 h-full border-gray-300 shadow-lg rounded-sm border bg-card text-card-foreground"
         >
-            <div
-                class="flex justify-center items-center gap-8 w-[400px] h-full border-gray-300 shadow-lg rounded-sm border bg-card text-card-foreground"
-            >
-                <div class="p-6">
-                    <SliderProduct productImages={imagesUrl} client:idle></SliderProduct>
+            <div class="p-6">
+                <SliderProduct productImages={imagesUrl} client:idle />
+            </div>
+        </aside>
+
+        <article
+            class="w-[400px] py-12 px-8 flex flex-col justify-center border-1 border-gray-300 rounded-sm shadow-lg bg-card text-card-foreground"
+        >
+            <div class="text-3xl font-extrabold flex flex-col space-y-1.5 p-6">
+                {name}
+            </div>
+            <div class="flex flex-col gap-8 h-1/2 p-6 pt-0">
+                <div>
+                    <h2 class="text-lg font-medium">
+                        ${price} MXN C/U
+                    </h2>
+                </div>
+                <div class="mt-4">
+                    <p>
+                        {description}
+                    </p>
                 </div>
             </div>
-
-            <div
-                class="w-[400px] h-full py-12 px-8 justify-between border-1 border-gray-300 rounded-sm shadow-lg bg-card text-card-foreground"
-            >
-                <div class="text-3xl font-extrabold flex flex-col space-y-1.5 p-6">{name}</div>
-                <div class="flex flex-col gap-8 h-1/2 p-6 pt-0">
-                    <div>
-                        <h2 class="text-lg font-medium">
-                            ${price} MXN C/U
-                        </h2>
-                    </div>
-                    <div class="mt-4">
-                        <p>
-                            {description}
-                        </p>
-                    </div>
-                </div>
-                <div class="flex flex-col gap-4">
-                    <div class="flex justify-center items-center p-6 pt-0 ">
-                        <Button
-                            id="decrement"
-                            className="bg-white hover:bg-gray-200 hover:cursor-pointer"
-                        >
-                            <Minus color="black" />
-                        </Button>
-                        <Input
-                            id="counter"
-                            type="number"
-                            defaultValue="0"
-                            className="w-1/3 text-center [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none [-moz-appearance:textfield]"
-                        />
-                        <Button
-                            id="increment"
-                            className="bg-white hover:bg-gray-200 hover:cursor-pointer"
-                        >
-                            <Plus color="black" />
-                        </Button>
-                    </div>
-                    <button
-                        class="px-6 py-2 w-full text-black rounded-sm bg-amber-400 hover:bg-amber-600 hover:cursor-pointer shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition"
+            <div class="flex flex-col gap-4">
+                <div class="flex justify-center items-center p-6 pt-0">
+                    <Button
+                        id="decrement"
+                        className="bg-white hover:bg-gray-200 hover:cursor-pointer"
                     >
-                        Add to cart
-                    </button>
+                        <Minus color="black" />
+                    </Button>
+                    <Input
+                        id="counter"
+                        type="number"
+                        defaultValue="0"
+                        className="w-1/3 text-center [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none [-moz-appearance:textfield]"
+                    />
+                    <Button
+                        id="increment"
+                        className="bg-white hover:bg-gray-200 hover:cursor-pointer"
+                    >
+                        <Plus color="black" />
+                    </Button>
                 </div>
+                <button
+                    class="px-6 py-2 w-full text-black rounded-sm bg-amber-400 hover:bg-amber-600 hover:cursor-pointer shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:shadow-[8px_8px_0px_0px_rgba(0,0,0,1)] transition"
+                >
+                <a href="https://wa.me/qr/AHFH55RNIGJ4J1" target="_blank">
+                    Realizar Pedido
+                </a>
+                </button>
+            </div>
         </article>
     </section>
 </Layout>
